[CORRECTION] Augmente le `z-index`
… pour passer au-dessus de la barre sticky de l'écran Sécuriser

--- a/public/assets/styles/entete.css
+++ b/public/assets/styles/entete.css
@@ -187,7 +187,7 @@ header nav a,
 
 .menu {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
 
   top: 2em;
   left: 0;
